modifying team functions for token output
